--- a/src/less/main.less
+++ b/src/less/main.less
@@ -49,17 +49,16 @@ body{
 				width: 620px;
 				height: 597px;
 				padding-top: 27px;
-				padding-bottom:96px;
+				padding-bottom:64px;
 				align-items: center;
 				box-shadow: 0px 4px 40px rgba(116, 130, 150, 0.2);
 				border-radius: 3px;
-				input, div, select{
+				input, select{
 					width: 272px;
 					height: 42px;
 					background: #fff;
 					padding: 4px 12px;
 					font-size: 16px;
-					margin-bottom: 30px;
 					border-radius: 3px;
 					border: 1px solid rgba(116, 130, 150, 0.2);
 
@@ -67,24 +66,48 @@ body{
 						color:rgba(45, 58, 64, 0.3);
 					}
 				}
+				.input-active{
+					margin-bottom: 30px;
+					position: relative;
+					.error{
+						position: absolute;
+						bottom: -19px;
+						left: 0;
+						background: #F0175C;
+						color: #fff;
+						padding-left: 4px;
+						border-radius: 0px 0px 4px 4px;
+						width: 225px;
+						display: flex;
+						justify-content: center;
+						height: 20px;
+					}
+				}
+				select{
+					margin-bottom: 30px;
+				}
+
 				.container-telephone{
 					display: flex;
 					flex-flow: row nowrap;
 					padding: 0;
 					width: 300px;
 					height: auto;
+					margin-bottom: 30px;
 					select{
 						width: 61px;
 						height: 54px;
 						margin:0;
-						border:0;
-						border-right: 1px solid rgba(116, 130, 150, 0.2);
-						border-radius: 0;
+						border-top-right-radius: 0;
+						border-bottom-right-radius: 0;
 					}
 					input{
 						margin:0;
+						height: 44px;
 						width: 218;
-						border:0;
+						border-left:0;
+						border-top-left-radius: 0;
+						border-bottom-left-radius: 0;
 					}
 					.flag{
 						position: relative;
