--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,3 @@
-html,body,header,div,figure,img,main,section,form,input,select,h2,p,i,option{box-sizing: 0; margin:0; padding:0;}
-form,input,select,h2,p,i,option, button, a{font-family: 'Roboto',sans-serif;}
 .container{
 	max-width: 1200px;
 	margin: 0 auto;
@@ -49,7 +47,7 @@ body{
 				width: 620px;
 				height: 597px;
 				padding-top: 27px;
-				padding-bottom:64px;
+				// padding-bottom:64px;
 				align-items: center;
 				box-shadow: 0px 4px 40px rgba(116, 130, 150, 0.2);
 				border-radius: 3px;
@@ -69,6 +67,22 @@ body{
 				.input-active{
 					margin-bottom: 30px;
 					position: relative;
+					&.focus{
+						&:before{
+							content: attr(data-text);
+							position: absolute;
+							left: 13px;
+							top: -8px;
+							background: #fff;
+							width: auto;
+							height: 20px;
+							font-size: 14px;
+							display: flex;
+							color:#2D3A40;
+							animation: fadeIN .5s ease-in;
+						}
+					}
+					
 					.error{
 						position: absolute;
 						bottom: -19px;
@@ -79,35 +93,73 @@ body{
 						border-radius: 0px 0px 4px 4px;
 						width: 225px;
 						display: flex;
-						justify-content: center;
-						height: 20px;
+						justify-content: flex-start;
+						align-items: center;
+						height: 0px;
+						font-size: 10px;
+						padding-left:20px;
+						&.active{
+							height: 20px;
+						}
 					}
 				}
 				select{
 					margin-bottom: 30px;
+					transition: all .3s ease-in-out;
+					outline: none;
+					&:active{
+						box-shadow: 0px 4px 10px rgba(116, 130, 150, 0.2);
+					}
 				}
 
 				.container-telephone{
 					display: flex;
 					flex-flow: row nowrap;
 					padding: 0;
-					width: 300px;
+					width: 272px;
 					height: auto;
-					margin-bottom: 30px;
-					select{
-						width: 61px;
-						height: 54px;
+					.container-flag{
+						width: 56px;
+						height: 42px;
 						margin:0;
 						border-top-right-radius: 0;
 						border-bottom-right-radius: 0;
+						padding: 0;
+						border: 1px solid rgba(116, 130, 150, 0.2);
+						list-style: none;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						position: relative;
+						font-style: normal;
+						border-top-left-radius:4px;
+						border-top-bottom-radius:4px;
+						&:after{
+							content: '\203A';
+							position: absolute;
+							right: 4px;
+							top: 12px;
+							transform: rotate(90deg);
+						}
+
+						.flag-brazil{
+							width: 20px;
+							height: 16px;
+							background: url(../images/flag-brazil.svg) no-repeat;
+							background-size:cover;
+							display: flex;
+						}
 					}
 					input{
 						margin:0;
 						height: 44px;
-						width: 218;
+						width: 218px;
 						border-left:0;
 						border-top-left-radius: 0;
 						border-bottom-left-radius: 0;
+					}
+					.error{
+						width: 180px;
 					}
 					.flag{
 						position: relative;
@@ -115,7 +167,7 @@ body{
 					}
 				}
 				select{
-					width: 300px;
+					width: 272px;
 					color:rgba(45, 58, 64, 0.8);
 				}
 				button{
@@ -124,15 +176,46 @@ body{
 					display: flex;
 					justify-content: center;
 					background: #14E298;
-					transition: all .3s ease-in-out;
 					border:0;
 					color: #fff;
 					cursor: pointer;
 					font-size: 16px;
 					font-weight: 500;
 					border-radius: 3px;
+					outline: none;
+					transition: all .3s ease-in-out;
+					margin-bottom: 20px;
 					&:hover{
 						background: #23F7AB;	
+					}
+					&.active{
+						background: #fff;
+						border: 1px solid #14E298;
+						color:#14E298;
+						&:hover{
+						background: #14E298;	
+						color: #fff;	
+						}
+					}
+				}
+				.obrigado{
+					width: 312px;
+					height: 36px;
+					background: #F5F7FA;
+					border-radius: 4px;
+					margin-bottom: 40px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					font-size: 14px;
+					visibility: hidden;
+					opacity: 0;
+					transition: all .3s ease-in-out;
+					transform: translateY(12px);
+					&.active{
+						transform: translateY(0);
+						visibility: visible;
+						opacity: 1;
 					}
 				}
 			}
@@ -159,5 +242,16 @@ body{
 				font-size: 14px;
 			}
 		}
+	}
+}
+
+@keyframes fadeIN {
+	0%{
+		visibility: hidden;
+		opacity: 0;
+	}
+	50%{
+		visibility: visible;
+		opacity: 1;	
 	}
 }
