--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,3 +1,14 @@
+@media screen and (min-width:993px){
+	body{
+		main{
+			section{
+				h2{
+					width: 600px;
+				}
+			}
+		}
+	}
+}
 @media screen and (max-width:992px){
 	body{
 
@@ -41,6 +52,7 @@
 				h2{
 					font-size:20px;
 					line-height: 28px;
+					margin-bottom: 12px;
 				}
 				p{
 					font-size: 13px;
